# perfetto-dsl

./: .gitignore  AGENTS.md  README.md  Trace_API文档.md  pyproject.toml  项目分析报告.md
.agents/: README.md
.agents/commands/: README.md  github-auth-token.md  issue-first-gate.md  issue-pr-closure-gate.md
.agents/rules/: README.md  github-agent-rules.md  review-rules.md
.agents/skills/: README.md
.agents/skills/digital-user-research/: SKILL.md
.agents/skills/exploration-logger/: SKILL.md
.agents/skills/github-operator/: SKILL.md
.agents/skills/market-discovery/: SKILL.md
.agents/skills/pr-writer/: SKILL.md
.agents/skills/task-planner/: SKILL.md
.agents/workflows/bugfix/: WORKFLOW.md
.agents/workflows/digital-user-research/: WORKFLOW.md
.agents/workflows/exploration/: WORKFLOW.md
.agents/workflows/feature-delivery/: WORKFLOW.md
.agents/workflows/issue-tracked-execution/: WORKFLOW.md
.agents/workflows/market-discovery/: WORKFLOW.md
.agents/workflows/refactor/: WORKFLOW.md
.github/workflows/: auto-tag-on-main.yml  ci.yml  publish-pypi.yml
perfetto/dsl/: __init__.py  cpu_freq_query_builder.py  cpu_usage_query_builder.py  metric_query_builder.py  trace.py
perfetto_trace_dsl/: __init__.py
perfetto_trace_dsl/dsl/: __init__.py  counter_query_builder.py  query_builder.py  related_objects.py  slice_query_builder.py
tests/: test_basic_functionality.py  test_enhanced_slice_integration.py  test_integration.py  test_query_builder.py  test_related_objects.py  test_slice.py  test_trace.py  test_trace_slice_openspec.py
(+10 files in other folders)
